# lox-rs

./: Cargo.toml  readme.md  todo.md
loxrs_interpreter/: Cargo.toml
loxrs_interpreter/src/: lox.rs  main.rs
loxrs_interpreter/src/lox/: entities.rs  interpreter.rs
loxrs_interpreter/src/lox/entities/: class.rs  eval.rs  expr.rs  func.rs  stmt.rs  token.rs  val.rs
loxrs_interpreter/src/lox/interpreter/: eval.rs  fns.rs  func.rs  parser.rs  reader.rs  resolver.rs  scanner.rs  visitor.rs
loxrs_interpreter/src/lox/interpreter/entities/: fns.rs  stmt.rs  token.rs  val.rs
loxrs_interpreter/src/lox/interpreter/test/e2e/: runner.rs
loxrs_interpreter/src/lox/interpreter/test/e2e/fail/: bad.lox  bad_redeclare.lox  bad_unused.lox  class_early_init_return.lox  syntax_err.lox
loxrs_interpreter/src/lox/interpreter/test/e2e/pass/: class.lox  class_empty_return_this.lox  resolving.lox  simple.lox  super.lox  ycomb.lox
loxrs_interpreter/src/lox/interpreter/test/e2e/samples/: closure.lox  fib.lox  iife.lox
loxrs_interpreter/src/lox/interpreter/test/e2e/spec/benchmark/: equality.lox
loxrs_interpreter/src/lox/interpreter/test/e2e/spec/class/: class_assign.lox  close_over_method_parameter.lox  inherited_method.lox
loxrs_interpreter/src/lox/interpreter/test/e2e/unimplemented/: basic_class.lox  class_assign.lox
loxrs_vm/: Cargo.toml
loxrs_vm/src/: compiler.rs  config.rs  constants.rs  entities.rs  error.rs  input.rs  lexer.rs  main.rs  parser.rs  scanner.rs  span.rs  types.rs  vm.rs
loxrs_vm/src/entities/: chunk.rs  object.rs  opcode.rs  precedence.rs  value.rs
(+42 files in other folders)
