[package]
name = "loxrs_interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace-on-stack-overflow = "0.3.0"
env_logger = "0.11.3"
log = "0.4.21"
loxrs_env = {path = "../loxrs_env"}
loxrs_types = {path = "../loxrs_types"}
