[package]
name = "loxrs_vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.4"
codespan-reporting = "0.11.1"
iota = "0.2.3"
thiserror = "1.0.63"
env_logger = "0.11.3"
log = { version = "0.4.21", features = ["release_max_level_off"] }
